# prosim

./: .coverage  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh
.sdlc/: architecture-v2.md  architecture.json  architecture.md  design-brief-v2.md  design-brief.md  review-findings-v2.json  review-findings.json  state.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: advanced-panel.tsx  decision-summary-strip.tsx  help-center.tsx  help-tip.tsx  inline-help.tsx  input-bar.tsx  metrics-cards.tsx  node-insight-panel.tsx  node-table.tsx  scenario-comparison-board.tsx  whatif-panel.tsx  workflow-diagram.tsx  workflow-graph.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  skeleton.tsx  slider.tsx  textarea.tsx
frontend/src/hooks/: use-prosim.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
scripts/: verify-api.sh
src/prosim/: __init__.py
src/prosim/api/: __init__.py  routes.py  server.py
src/prosim/cli/: __init__.py  commands.py  main.py
src/prosim/dashboard/: __init__.py  app.py  components.py
src/prosim/export/: __init__.py  json_export.py  mermaid.py  reports.py
src/prosim/graph/: __init__.py  models.py  operations.py  serialization.py
src/prosim/intervention/: __init__.py  engine.py  leverage.py  models.py
src/prosim/parser/: __init__.py  client.py  postprocess.py  prompts.py
src/prosim/simulation/: __init__.py  bottleneck.py  deterministic.py  montecarlo.py  results.py  sensitivity.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_cli/: test_commands.py
tests/test_export/: test_mermaid.py  test_reports.py
tests/test_graph/: test_models.py  test_operations.py  test_serialization.py
tests/test_intervention/: test_engine.py  test_leverage.py  test_models.py
tests/test_parser/: test_postprocess.py
tests/test_simulation/: test_bottleneck.py  test_deterministic.py  test_montecarlo.py  test_sensitivity.py
