[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prosim"
version = "0.1.0"
description = "Workflow Simulation Engine with Process Mining Capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "networkx>=3.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.5",
    "click>=8.1",
    "streamlit>=1.30",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
prosim = "prosim.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
